--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,12 @@ byteorder = "1.5.0"
 chrono = "0.4.35"
 clap = "4.5.2"
 csv = "1.3.0"
+futures = "0.3.30"
 rand = "0.8.5"
 serde = { version = "1.0.197", features = ["derive"] }
 tempfile = "3.10.1"
 tokio = { version = "1.36.0", features = ["full"] }
+tokio-stream = "0.1.15"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 uuid7 = { version = "0.7.2", features = ["serde", "uuid"] }
